HUGO_ENV = production

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,8 @@ jobs:
 
       - name: Build
         run: hugo --minify
+        env:
+          HUGO_ENV: "production"
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
